--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="resources/|src/org/jboss/seam/example/booking/|src/org/jboss/seam/example/booking/test/|view/|view/css/|view/exp/|view/img/|src/org/jboss/seam/example/|src/org/jboss/seam/|src/org/jboss/|src/org/|src/|src/|resources/" kind="src" path=""/>
+	<classpathentry excluding="resources/|src/org/jboss/seam/example/booking/|src/org/jboss/seam/example/booking/test/|view/|view/css/|view/exp/|view/img/|src/org/jboss/seam/example/|src/org/jboss/seam/|src/org/jboss/|src/org/|src/|src/|resources/|lib/" kind="src" path=""/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="output" path="bin"/>
