--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.seam.examples</groupId>
-	<artifactId>jboss-seam-booking</artifactId>
+	<artifactId>tagsobe-jboss-seam-hotel-booking</artifactId>
 	<parent>
 		<groupId>org.jboss.seam</groupId>
 		<artifactId>parent</artifactId>
